# parsix

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  parsix.cabal  stack.yaml
src/Text/: Parsix.hs
src/Text/Parsix/: Combinators.hs  Highlight.hs  Internal.hs  Parser.hs  Position.hs  Result.hs
src/Text/Parsix/Parser/: Internal.hs
tests/: Empty.hs  Fail.hs  Main.hs  NotFollowedBy.hs  Util.hs  WithRecovery.hs
