name:                parsix
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ollef/parsix
license:             BSD3
license-file:        LICENSE
author:              Olle Fredriksson
maintainer:          fredriksson.olle@gmail.com
copyright:           2017 Olle Fredriksson
category:            Parsing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ollef/parsix

library
  hs-source-dirs:      src
  exposed-modules:     Text.Parsix
                       Text.Parsix.Combinators,
                       Text.Parsix.Highlight,
                       Text.Parsix.Parser,
                       Text.Parsix.Position,
                       Text.Parsix.Result
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       containers,
                       fingertree,
                       mtl,
                       parsers,
                       prettyprinter,
                       prettyprinter-ansi-terminal,
                       text,
                       transformers
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -funbox-strict-fields

source-repository head
  type:     git
  location: https://github.com/githubuser/parsix
